@@ -1,3 +1,12 @@
+2009-04-01  David S. Miller  <davem@davemloft.net>
+
+	* normal/sparc64/setjmp.S: Fix setjmp implementation.
+	* include/grub/sparc64/setjmp.h (grub_jmp_buf): Update.	 
+	(grub_setjmp): Mark with 'returns_twice' attribute.
+	* include/grub/i386/setjmp.h (grub_setjmp): Likewise
+	* include/grub/powerpc/setjmp.h (grub_setjmp): Likewise.
+	* include/grub/x86_64/setjmp.h (grub_setjmp): Likewise.
+
 2009-04-01  Robert Millan  <rmh@aybabtu.com>
 
 	Reapply fix from 2008-07-28 which was accidentally reverted; also
